# cvg

./: .gitignore  CMakeLists.txt
include/graphics/: color.h  screen.h  shape.h  style.h  svg_visitor.h  transform.h  visitor.h
include/graphics/shapes/: circle.h  group.h  line.h
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  pattern_001.cpp  pattern_002.cpp
src/graphics/: CMakeLists.txt  color.cpp  screen.cpp  shape.cpp  style.cpp  svg_visitor.cpp  transform.cpp
src/graphics/shapes/: CMakeLists.txt  circle.cpp  group.cpp  line.cpp
tests/: user_guide.cpp
